tests-integration/fixtures/checking/1777091040_row_union_open_duplicates/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Proxy :: forall (k :: Type) (@a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
rightmostDuplicate ::
  forall (l :: Row Type).
    Union @Type (l :: Row Type) ( a :: String ) ( a :: Int, a :: String ) =>
    Proxy @(Row Type) (l :: Row Type)
leftmostDuplicateMismatch ::
  forall (l :: Row Type).
    Union @Type (l :: Row Type) ( a :: String ) ( a :: String, a :: Int ) =>
    Proxy @(Row Type) (l :: Row Type)
openOutputBackwards ::
  forall (l :: Row Type) (r :: Row Type).
    Union @Type (l :: Row Type) ( b :: String ) ( a :: Int, b :: String | (r :: Row Type) ) =>
    Proxy @(Row Type) (l :: Row Type)
forceSolve ::
  forall (t :: Row Type) (t1 :: Row Type).
    Union @Type (t :: Row Type) ( b :: String ) ( a :: Int, b :: String | (t1 :: Row Type) ) =>
    { leftmostDuplicateMismatch :: Proxy @(Row Type) ( a :: String )
    , openOutputBackwards :: Proxy @(Row Type) (t :: Row Type)
    , rightmostDuplicate :: Proxy @(Row Type) ( a :: Int )
    }

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type

Roles
Proxy = [Phantom]

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Int'
  --> 17:1..21:4
   |
17 | forceSolve =
   | ^~~~~~~~~~~~
error[CannotUnify]: Cannot unify '( a :: String )' with '( a :: Int )'
  --> 17:1..21:4
   |
17 | forceSolve =
   | ^~~~~~~~~~~~
